--- a/astrogamma/tp/FitData.ipynb
+++ b/astrogamma/tp/FitData.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Indice = 0.5232093929133377 +- 0.0012314114226591993\n",
-      "Norme = 2.3638114819461263e-12 + -  1.630063372975489e-26 erg cm^-2 s^-1\n"
+      "Indice = 2.488183497524778 +- 2.543734552165729e-05\n",
+      "Norme = 1.7918483802397808e-12 + -  3.9217388791511134e-28 erg cm^-2 s^-1\n"
      ]
     }
    ],
@@ -23,27 +23,19 @@
     "\n",
     "#################################################### Donnees a remplir ###################################################\n",
     "\n",
-    "#Source 1\n",
+    "#points spectraux de la source \n",
     "x = [] # TeV\n",
-    "err_x = [] # TeV\n",
-    "y = [] # erg cm-2 s-1\n",
-    "err_y = [] # erg cm-2 s-1\n",
+    "y = [] # photon cm-2 s-1\n",
+    "err_y = [] # photon cm-2 s-1\n",
     "\n",
     "########################################## Ajustement et graphique #####################################################\n",
     "\n",
     "popt, pcov = scipy.optimize.curve_fit(powerlaw, x, y, p0=[1e-13,2.51],sigma=err_y)\n",
     "\n",
     "#Print les resultats\n",
-    "print(\"Indice = \" + str(popt[1]) + \" +- \"+ str(pcov[1][1]))\n",
+    "print(\"Indice = \" + str(popt[1]+1) + \" +- \"+ str(pcov[1][1]))\n",
     "print(\"Norme = \" + str(popt[0]) + \" + -  \"+ str(pcov[0][0])+ \" erg cm^-2 s^-1\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
