--- a/astrogamma/tp/Significance_csphagen.ipynb
+++ b/astrogamma/tp/Significance_csphagen.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Renseigner le chemin du fichier onoff_pha_on.fits \n",
-      "Renseigner le chemin du fichier onoff_pha_off.fits \n",
-      "Renseigner le chemin du fichier onoff_off.reg \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Renseigner le chemin du fichier onoff_pha_on.fits \")\n",
     "print(\"Renseigner le chemin du fichier onoff_pha_off.fits \")\n",
@@ -23,18 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fichON = '/Users/davidsanchez/work/Studen/TP_CTA_2020/TPAstro/git_tp/David/onoff_pha_on.fits'\n",
     "fichOFF = '/Users/davidsanchez/work/Studen/TP_CTA_2020/TPAstro/git_tp/David/onoff_pha_off.fits'\n",
-    "fichREG = '/Users/davidsanchez/work/Studen/TP_CTA_2020/TPAstro/git_tp/David/onoff_off.reg'"
+    "fichREG = '/Users/davidsanchez/work/Studen/TP_CTA_2020/TPAstro/git_tp/David/onoff_off.reg'\n",
+    "\n",
+    "\n",
+    "import os.path\n",
+    "if (os.path.exists(fichON)):\n",
+    "    print('Le fichier '+fichON+' est présent')\n",
+    "else:\n",
+    "    print(\"Le fichier \"+fichON+\" est faux\")\n",
+    "\n",
+    "if (os.path.exists(fichOFF)):\n",
+    "    print('Le fichier '+fichOFF+'est présent')\n",
+    "else:\n",
+    "    print(\"Le fichier \"+fichOFF+\" est faux\")\n",
+    "    \n",
+    "if (os.path.exists(fichREG)):\n",
+    "    print('Le fichier '+fichREG+'est présent')\n",
+    "else:\n",
+    "    print(\"Le fichier \"+fichREG+\" est faux\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,20 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Non = 1414.0\n",
-      "Noff = 4831.0\n",
-      "Nb region = 7\n",
-      "Significance = 22.13016743140513\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Lit les donnees\n",
     "on_file = fits.open(fichON)\n",
@@ -114,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
