--- a/astrogamma/tp/SimpleSignificance.ipynb
+++ b/astrogamma/tp/SimpleSignificance.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Renseigner le nombre d'événement ON, Non\n",
-      "Renseigner le nombre d'événement Off, Noff\n",
-      "Renseigner le nombre de region OFF utilisé, nb_regions\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Renseigner le nombre d'événement ON, Non\")\n",
     "print(\"Renseigner le nombre d'événement Off, Noff\")\n",
@@ -23,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mu_bk = Noff*nb_regions"
+    "#calcul de mu_bkg\n",
+    "mu_bk = Noff/nb_regions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,20 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Non = 1433\n",
-      "Noff = 2039\n",
-      "Nb region = 3\n",
-      "Significance = 22.903482799922582\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Print les resultats\n",
     "print(\"Non = \" + str(Non))\n",
@@ -100,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
