--- a/astrogamma/tp/FindPosition.ipynb
+++ b/astrogamma/tp/FindPosition.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileData = '/Users/davidsanchez/work/Studen/TP_CTA_2020/TPAstro/git_tp/David/skymap.fits'\n",
+    "fileData = '/home/lavergne/these/enseignement/astrogammaTP/RECH601/astrogamma/tp/skymap.fits'\n",
     "import os.path\n",
     "print(fileData)\n",
     "if (os.path.exists(fileData)):\n",
@@ -36,9 +36,15 @@
     "from astropy.io import fits\n",
     "from astropy.wcs import WCS\n",
     "\n",
-    "controlPlot = True\n",
-    "\n",
-    "\n",
+    "controlPlot = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "########################################### Read data and find position of sources bu modelling the spatial emision ################################################\n",
     "file = fits.open(fileData)\n",
     "image= file[0].data\n",
@@ -91,8 +97,10 @@
     "#Determine position of Cen A\n",
     "positionCenA = coodSystem.pixel_to_world(imageModel.y_mean_1.value, imageModel.x_mean_1.value)\n",
     "errPositionCenA = np.mean([errVector[7],errVector[8]])*cdelt\n",
+    "sizeCenA = np.mean([imageModel.x_stddev_1.value,imageModel.y_stddev_1.value])*cdelt\n",
     "\n",
     "print(\"Cen A: RA = \"+str(positionCenA.ra.deg)+ \" deg, Dec = \" + str(positionCenA.dec.deg) + \" deg\")\n",
+    "print(\"Cen A: apparent size = \" + str(sizeCenA) + \" deg\")\n",
     "print(\"Cen A: Position uncertainty = \"+str(errPositionCenA)+ \" deg\")\n"
    ]
   },
@@ -105,8 +113,10 @@
     "#determine position of source 2\n",
     "positionSrc2 = coodSystem.pixel_to_world(imageModel.y_mean_2.value, imageModel.x_mean_2.value)\n",
     "errPositionSrc2 = np.mean([errVector[11],errVector[12]])*cdelt\n",
+    "sizeSrc2 = np.mean([imageModel.x_stddev_1.value,imageModel.y_stddev_1.value])*cdelt\n",
     "\n",
     "print(\"Source 2: RA = \"+str(positionSrc2.ra.deg)+ \" deg, Dec = \" + str(positionSrc2.dec.deg) + \" deg\")\n",
+    "print(\"Source 2: apparent size = \" + str(sizeSrc2) + \" deg\")\n",
     "print(\"Source 2: Position uncertainty = \"+str(errPositionSrc2)+ \" deg\")"
    ]
   },
